--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>Challenge: Apples and bananas classes</title>
         <style>
-            
-        </style>
+        .apples   {background-color:yellow}  
+       .bananas {background-color: rgb(50, 95, 134);}
+       </style>
     </head>
     <body>
 
